--- a/css/style.css
+++ b/css/style.css
@@ -464,11 +464,11 @@ nav.main-menu {
 
 .menu-area-main li:hover a,
 .menu-area-main li:focus a {
-	color: #000;
+	color: #DCEF3D;
 }
 
 .menu-area-main li.active a {
-	color: #000;
+	color: #DCEF3D;
 }
 
 .right_cart_section {
@@ -1050,7 +1050,7 @@ nav.main-menu {
 	font-size: 16px;
 	display: block;
 	font-weight: 500;
-	color: #fff;
+	color: #0194D9;
 	text-transform: uppercase;
 }
 
@@ -1643,7 +1643,7 @@ input[type="radio"] .styled:checked+label::after {
 ---------------------------------------------------------------------*/
 
 .header {
-	background: #0fc690;
+	background: #FFFFFF;
 	padding: 40px 0px;
 	padding-bottom: 35px;
 }
@@ -1652,7 +1652,7 @@ input[type="radio"] .styled:checked+label::after {
 	font-size: 40px;
 	font-weight: bold;
 	text-transform: uppercase;
-	color: #fff;
+	color: #0194D9;
 	line-height: 40px;
 }
 
@@ -1805,11 +1805,16 @@ input[type="radio"] .styled:checked+label::after {
 .service {
 	padding-top: 90px;
 	padding-bottom: 60px;
-	background: #f4f4f4;
+	background: #0194D9;
+}
+
+.service .titlepage h2 {
+	color: #ffffff !important;
+	border-bottom: #ffffff solid 1px !important;
 }
 
 .service .titlepage span {
-	color: # 3d3c3c
+	color: #ffffff;
 }
 
 .service .service-box figure {
@@ -1976,17 +1981,18 @@ img.zoom {
 #main_slider .carousel-control-next {
 	width: 55px;
 	height: 55px;
-	background: #000;
+	background: #0194D9;
 	opacity: 1;
 	font-size: 30px;
 	color: #fff;
+	border-radius: 5px;
 }
 
 #main_slider .carousel-control-prev:hover,
 #main_slider .carousel-control-next:hover,
 #main_slider .carousel-control-prev:focus,
 #main_slider .carousel-control-next:focus {
-	background: #0fc690;
+	background: #DCEF3D;
 	color: #fff;
 }
 
@@ -2027,7 +2033,7 @@ img.zoom {
 /** end download section **/
 
 .testimonial {
-	background: #0fc690;
+	background: #0194D9;
 	padding: 60px 0px;
 }
 
@@ -2036,12 +2042,10 @@ img.zoom {
 }
 
 .testimonial .titlepage h3 {
-	padding: 0px 0px 6px 0px;
-	font-size: 30px;
+	font-size: 40px;
 	font-weight: bold;
 	color: #fff;
 	line-height: 46px;
-	border-bottom: #fff solid 1px;
 	width: 184px;
 	margin: 0 auto;
 	margin-bottom: 60px;
@@ -2151,21 +2155,22 @@ img.zoom {
 
 .testimonial .contact .send {
 	font-size: 16px;
-	border: #000 solid 1px;
+	border: #0194D9 solid 1px;
 	padding: 10px 50px;
-	background-color: #000;
+	background-color: #0194D9;
 	color: #fff;
 	display: flex;
 	justify-content: center;
 	margin: 0 auto;
 	align-items: center;
 	flex-wrap: wrap;
+	border-radius: 5px;
 }
 
 .testimonial .contact .send:hover {
-	background-color: #0fc690;
-	border: #0fc690 solid 1px;
-	color: #fff;
+	background-color: #fff;
+	border: #0194D9 solid 2px;
+	color: #0194D9;
 }
 
 .width {
