--- a/css/style.css
+++ b/css/style.css
@@ -1812,6 +1812,8 @@ input[type="radio"] .styled:checked+label::after {
 
 .service .titlepage span {
 	color: #ffffff;
+	font-size: 17px;
+	line-height: 30px;
 }
 
 .service .service-box figure {
@@ -1952,7 +1954,8 @@ img.zoom {
 }
 
 .download .titlepage span {
-	color: # 3d3c3c
+	font-size: 17px;
+	line-height: 30px;
 }
 
 .download .titlepage h2 {
